--- a/index.html
+++ b/index.html
@@ -1,123 +1,23 @@
 <!DOCTYPE html>
-<html lang="id">
+<html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Undangan Pernikahan</title>
-
-  <link rel="stylesheet" href="style.css">
-  <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Open+Sans&display=swap" rel="stylesheet">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>login</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
-  <!-- Audio Musik -->
-  <audio id="music" controls autoplay loop>
-    <source src="Cinta Terakhir - Ari Lasso ｜ Lirik Video Lagu Indonesia.mp3" type="audio/mpeg">
-    Browser Anda tidak mendukung audio.
-  </audio>
-
-  <main class="container">
-
-    <!-- Judul -->
-    <header class="header">
-      <center>
-      <h1>HEMA & RANIA</h1>
-      </center>
-    </header>
-
-    <!-- Foto -->
-    <section class="photo-section">
-      <img src="hema&rania.jpg" alt="Foto Pasangan" class="couple-photo">
-    </section>
-
-    <!-- Undangan -->
-    <section class="invitation">
-      <h2>Undangan Pernikahan</h2>
-      <p>
-        Dengan penuh kebahagiaan, kami mengundang Bapak/Ibu/Saudara/i
-        untuk menghadiri acara pernikahan kami:
-      </p>
-      <h3>Rania Azalea & Hema Candra</h3>
-      <p>
-        <strong>Sabtu, 28 Desember 2025</strong><br>
-        Gedung Serbaguna Bahagia, Jakarta
-      </p>
-    </section>
-
-    <!-- Rangkaian Acara -->
-    <section class="details">
-      <h2>Rangkaian Acara</h2>
-
-      <div class="event">
-        <h4>Akad Nikah</h4>
-        <p>09.00 WIB - Selesai</p>
-      </div>
-
-      <div class="event">
-        <h4>Resepsi</h4>
-        <p>11.00 - 14.00 WIB</p>
-      </div>
-    </section>
-
-    <!-- Cerita -->
-    <section class="story">
-      <h2>Cerita Kami</h2>
-
-      <div class="story-item">
-        <h4>Pertemuan</h4>
-        <p>
-          Kami pertama kali bertemu tanpa rencana, namun semesta seolah sudah
-          menuliskan cerita ini. Dari pertemuan sederhana, tumbuh rasa yang
-          perlahan menjadi berarti.
-        </p>
-      </div>
-
-      <div class="story-item">
-        <h4>Perjalanan</h4>
-        <p>
-          Banyak tawa, doa, dan air mata yang kami lalui bersama. Setiap langkah
-          mengajarkan kami arti kesabaran, pengertian, dan cinta yang tulus.
-        </p>
-      </div>
-
-      <div class="story-item">
-        <h4>Ikatan Suci</h4>
-        <p>
-          Dengan penuh rasa syukur, kami memutuskan untuk melangkah ke jenjang
-          pernikahan, memulai babak baru sebagai satu tujuan, satu doa, dan satu cinta.
-        </p>
-      </div>
-    </section>
-
-    <!-- Lokasi -->
-    <section class="location">
-      <h2>Lokasi Acara</h2>
-      <p>Gedung Serbaguna Bahagia</p>
-      <a
-        href="https://www.google.com/maps/search/?api=1&query=Gedung+Serbaguna+Bahagia+Jakarta"
-        target="_blank"
-        class="map-btn">
-        📍 Lihat Lokasi di Google Maps
-      </a>
-    </section>
-
-    <!-- RSVP -->
-    <section class="rsvp">
-      <h2>Konfirmasi Kehadiran</h2>
-      <p>Silakan konfirmasi kehadiran Anda melalui WhatsApp:</p>
-      <a href="https://wa.me/6281234567890" target="_blank">
-        Konfirmasi Sekarang
-      </a>
-    </section>
-
-    <!-- Footer -->
-    <footer class="footer">
-      <p>Terima kasih atas doa dan restunya 🙏</p>
-      <p class="love">❤️ Rania & Hema ❤️</p>
-    </footer>
-
-  </main>
+     <!-- ===== Halaman 1 ===== -->
+  <div class="page" id="halaman1">
+    <h1>Kepada Yth.</h1>
+    <h2>Bapak/Ibu/Saudara/i</h2>
+    <p>Dengan hormat, kami mengundang Anda untuk menghadirin pernikahan anak kami.</p>
+    <h1 style="color: blanchedalmond;">────୨ৎ────</h1>
+    <button onclick="masuk()" id="BukaUndangan">Buka Undangan</button>
+    <h1 style="color: blanchedalmond;text-align: right;">🕊♡₊˚ 🦢・₊✧💍</h1>
+  </div>
 
   <script src="script.js"></script>
+
 </body>
 </html>
